# ChangeLog for app-editors/adie
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/adie/ChangeLog,v 1.34 2010/03/29 09:54:04 pacho Exp $

  29 Mar 2010; Pacho Ramos <pacho@gentoo.org> adie-1.6.36.ebuild:
  amd64 stable, bug 309199

  15 Mar 2010; nixnut <nixnut@gentoo.org> adie-1.6.36.ebuild:
  ppc stable #309199

  20 Jan 2010; Brent Baude <ranger@gentoo.org> adie-1.6.36.ebuild:
  Marking adie-1.6.36 ppc64 for bug 276854

*adie-1.6.36 (28 Jul 2009)

  28 Jul 2009; Jeroen Roovers <jer@gentoo.org> +adie-1.6.36.ebuild:
  Version bump (bug #276854).

  17 Apr 2009; Matti Bickel <mabi@gentoo.org> -adie-1.6.34.ebuild:
  cleanup

  10 Apr 2009; Raúl Porcel <armin76@gentoo.org> adie-1.6.35.ebuild:
  sparc stable wrt #263795

  04 Apr 2009; Markus Meier <maekke@gentoo.org> adie-1.6.35.ebuild:
  amd64/x86 stable, bug #263795

  03 Apr 2009; Brent Baude <ranger@gentoo.org> adie-1.6.35.ebuild:
  Marking adie-1.6.35 ppc64 stable for bug 263795

  31 Mar 2009; Jeroen Roovers <jer@gentoo.org> adie-1.6.35.ebuild:
  Stable for HPPA (bug #263795).

  30 Mar 2009; Brent Baude <ranger@gentoo.org> adie-1.6.35.ebuild:
  Marking adie-1.6.35 ppc for bug 263795

*adie-1.6.35 (01 Mar 2009)

  01 Mar 2009; Matti Bickel <mabi@gentoo.org> metadata.xml,
  -adie-1.6.30.ebuild, -adie-1.6.31.ebuild, +adie-1.6.35.ebuild:
  removed old builds, added new version using EAPI 1 slot deps, to avoid
  bumping when nothing really changed in the fox stable api. This will be the
  last bump for adie-1.6

  05 Dec 2008; Raúl Porcel <armin76@gentoo.org> adie-1.6.34.ebuild:
  sparc stable wrt #249286

  03 Dec 2008; Markus Meier <maekke@gentoo.org> adie-1.6.34.ebuild:
  amd64/x86 stable, bug #249286

  02 Dec 2008; Jeroen Roovers <jer@gentoo.org> adie-1.6.34.ebuild:
  Stable for HPPA (bug #249286).

*adie-1.6.34 (03 Oct 2008)

  03 Oct 2008; Matti Bickel <mabi@gentoo.org> +adie-1.6.34.ebuild:
  version bump
