@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/shutterbug/shutterbug-1.6.36.ebuild,v 1.3 2010/03/15 18:38:24 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/shutterbug/shutterbug-1.6.36.ebuild,v 1.4 2010/03/31 06:54:07 phajdan.jr Exp $
 
 EAPI="1"
 
@@ -10,7 +10,7 @@ DESCRIPTION="Screenshot utility based on the FOX Toolkit"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~hppa ppc ppc64 ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~hppa ppc ppc64 ~sparc x86"
 IUSE="jpeg png tiff"
 
 DEPEND="x11-libs/fox:1.6
