@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/pathfinder
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/pathfinder/ChangeLog,v 1.28 2010/03/15 18:37:45 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/pathfinder/ChangeLog,v 1.29 2010/03/31 06:52:14 phajdan.jr Exp $
+
+  31 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  pathfinder-1.6.36.ebuild:
+  x86 stable wrt bug #309199
 
   15 Mar 2010; nixnut <nixnut@gentoo.org> pathfinder-1.6.36.ebuild:
   ppc stable #309199
