@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/shutterbug
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/shutterbug/ChangeLog,v 1.24 2010/03/15 18:38:24 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/shutterbug/ChangeLog,v 1.25 2010/03/31 06:54:07 phajdan.jr Exp $
+
+  31 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  shutterbug-1.6.36.ebuild:
+  x86 stable wrt bug #309199
 
   15 Mar 2010; nixnut <nixnut@gentoo.org> shutterbug-1.6.36.ebuild:
   ppc stable #309199
