@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/adie
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/adie/ChangeLog,v 1.34 2010/03/29 09:54:04 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/adie/ChangeLog,v 1.35 2010/03/31 06:50:07 phajdan.jr Exp $
+
+  31 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> adie-1.6.36.ebuild:
+  x86 stable wrt bug #309199
 
   29 Mar 2010; Pacho Ramos <pacho@gentoo.org> adie-1.6.36.ebuild:
   amd64 stable, bug 309199
